[package]
name = "substrate"
version = "0.1.0"
authors = ["t"]
edition = "2018"

[[bin]]
name = "substrate"
path = "src/main.rs"

[dependencies]
node-cli = { package = "node-cli", path = "cli" }



[workspace]
members = [
    'cli',
    "primitives",
    'executor',
    'inspect',
    'runtime',
]

[profile.release]
panic = 'unwind'
