[package]
name = "trustbase"
version = "0.1.0"
authors = ["trust dev"]
license = 'Apache-2.0'
edition = "2018"

[[bin]]
name = "trustbase"
path = "src/main.rs"

[dependencies]
node-cli = { package = "node-cli", path = "cli" }



[workspace]
members = [
    'cli',
    "primitives",
    'executor',
    'inspect',
    'runtime',
]

[profile.release]
panic = 'unwind'
