[package]
name = "node-cli"
build = "build.rs"
edition = "2018"
version = "0.1.0"
authors = ["trust dev"]
license = 'Apache-2.0'
description = "Generic TrustBase node implementation in Rust."

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

#[[bin]]
#name = "trustbase"
#path = "bin/main.rs"
#required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
parking_lot = "0.11.1"
funty = "=1.1.0"

# primitives
sp-authority-discovery = { version = "3.0.0",  git = "https://github.com/paritytech/substrate" }
sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
grandpa-primitives = { version = "3.0.0", package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }

# client dependencies
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-network = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-consensus-slots = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
grandpa = { version = "0.9.0", package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate" }
sc-client-db = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sc-offchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-service = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sc-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-authority-discovery = { version = "0.9.0",  git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa-warp-sync = { version = "0.9.0", git = "https://github.com/paritytech/substrate", optional = true }

# frame dependencies
pallet-indices = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-contracts = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
frame-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-balances = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-im-online = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-authority-discovery = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-staking = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }

# node-specific dependencies
node-runtime = { path = "../runtime" }
node-rpc = { path = "../rpc" }
node-primitives = { path = "../primitives" }
node-executor = { path = "../executor" }

# CLI-specific dependencies
sc-cli = { version = "0.9.0", optional = true, git = "https://github.com/paritytech/substrate" }
frame-benchmarking-cli = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate" }
node-inspect = { optional = true, path = "../inspect" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
browser-utils = { package = "substrate-browser-utils", git = "https://github.com/paritytech/substrate", optional = true, version = "0.9.0"}

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { path = "../executor", features = [ "wasmtime" ] }
sc-cli = { version = "0.9.0", optional = true, git = "https://github.com/paritytech/substrate", features = [ "wasmtime" ] }
sc-service = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate", features = [ "wasmtime" ] }
sp-trie = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-consensus-babe = { version = "0.9.0", features = ["test-helpers"], git = "https://github.com/paritytech/substrate" }
sc-consensus-epochs = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-service-test = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
futures = "0.3.9"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.19"
serde_json = "1.0"
regex = "1"
platforms = "1.1"
async-std = { version = "1.6.5", features = ["attributes"] }
soketto = "0.4.2"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { optional = true, path = "../inspect" }
frame-benchmarking-cli = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate" }
substrate-build-script-utils = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate" }
substrate-frame-cli = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate" }

[build-dependencies.sc-cli]
version = "0.9.0"
package = "sc-cli"
git = "https://github.com/paritytech/substrate"
optional = true

[features]
default = [ "cli" ]
browser = [
	"browser-utils",
	"wasm-bindgen",
	"wasm-bindgen-futures",
]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"sc-finality-grandpa-warp-sync",
	"structopt",
	"substrate-build-script-utils",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
