[package]
name = "node-cli"
version = "2.0.0"
build = "build.rs"
edition = "2018"

authors = ["trust dev"]
license = 'Apache-2.0'
description = "Generic TrustBase node implementation in Rust."

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

#[[bin]]
#name = "trustbase"
#path = "bin/main.rs"
#required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
parking_lot = "0.11.1"

# primitives
sp-authority-discovery = { version = "3.0.0",  git = "https://github.com/paritytech/substrate" }
sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
grandpa-primitives = { version = "3.0.0", package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-timestamp = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-authorship = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }

# client dependencies
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-network = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-consensus-slots = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-consensus-uncles = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
grandpa = { version = "0.9.0", package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate" }
sc-client-db = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sc-offchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-service = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sc-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-authority-discovery = { version = "0.9.0",  git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa-warp-sync = { version = "0.9.0", git = "https://github.com/paritytech/substrate", optional = true }

# frame dependencies
pallet-indices = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-contracts = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
frame-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-balances = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-im-online = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-authority-discovery = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-staking = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { version = "3.1.0", git = "https://github.com/paritytech/substrate" }

# node-specific dependencies
node-runtime = { version = "2.0.0", path = "../runtime" }
node-rpc = { version = "2.0.0", path = "../rpc" }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-executor = { version = "2.0.0", path = "../executor" }

# CLI-specific dependencies
sc-cli = { version = "0.9.0", optional = true, git = "https://github.com/paritytech/substrate" }
frame-benchmarking-cli = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate" }
node-inspect = { version = "0.8.0", optional = true, path = "../inspect" }
try-runtime-cli = { version = "0.9.0", optional = true, path = "../../../utils/frame/try-runtime/cli" }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.73", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
browser-utils = { package = "substrate-browser-utils", git = "https://github.com/paritytech/substrate", optional = true, version = "0.9.0"}
libp2p-wasm-ext = { version = "0.28", features = ["websocket"], optional = true }

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { version = "2.0.0", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { version = "0.9.0", optional = true, git = "https://github.com/paritytech/substrate", features = [ "wasmtime" ] }
sc-service = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate", features = [ "wasmtime" ] }
sp-trie = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", features = ["memory-tracker"] }

[dev-dependencies]
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-consensus-babe = { version = "0.9.0", features = ["test-helpers"], git = "https://github.com/paritytech/substrate" }
sc-consensus-epochs = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-service-test = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
futures = "0.3.9"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.19"
serde_json = "1.0"
regex = "1"
platforms = "1.1"
async-std = { version = "1.6.5", features = ["attributes"] }
soketto = "0.4.2"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { version = "0.8.0", optional = true, path = "../inspect" }
frame-benchmarking-cli = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate" }
substrate-build-script-utils = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate" }
substrate-frame-cli = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate" }
try-runtime-cli = { version = "0.9.0", optional = true, path = "../../../utils/frame/try-runtime/cli" }

[build-dependencies.sc-cli]
version = "0.9.0"
package = "sc-cli"
git = "https://github.com/paritytech/substrate"
optional = true

[features]
default = [ "cli" ]
browser = [
	"browser-utils",
	"wasm-bindgen",
	"wasm-bindgen-futures",
	"libp2p-wasm-ext",
]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	"sc-finality-grandpa-warp-sync",
	"structopt",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"node-runtime/try-runtime",
	"try-runtime-cli",
]
