[package]
name = "node-executor"
edition = "2018"
version = "0.1.0"
authors = ["trust dev"]
license = 'Apache-2.0'
description = "TrustBase node implementation in Rust."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6" }
node-primitives = { path = "../primitives" }
node-runtime = { path = "../runtime" }
sc-executor = { version = "0.8.0", git = "https://github.com/paritytech/substrate" }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
sp-keystore = { version = "0.8.0", git = "https://github.com/paritytech/substrate" }
sp-io = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
sp-state-machine = { version = "0.8.0", git = "https://github.com/paritytech/substrate" }
sp-trie = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
trie-root = "0.16.0"
frame-benchmarking = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
criterion = "0.3.0"
frame-support = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
frame-system = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
#node-testing = { version = "2.0.0", path = "../testing" }
pallet-balances = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
pallet-contracts = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
pallet-im-online = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
pallet-indices = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
pallet-session = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
pallet-treasury = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
sp-application-crypto = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
sp-externalities = { version = "0.8.0", git = "https://github.com/paritytech/substrate" }
substrate-test-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
wat = "1.0"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false
