[package]
name = "node-inspect"
edition = "2018"
version = "0.1.0"
authors = ["trust dev"]
license = 'Apache-2.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6" }
derive_more = "0.99"
log = "0.4.8"
sc-cli = { version = "0.8.0", git = "https://github.com/paritytech/substrate" }
sc-client-api = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
sc-service = { version = "0.8.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-blockchain = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate" }
structopt = "0.3.8"
