[package]
name = "node-rpc"
version = "2.0.0"
authors = ["trust dev"]
edition = "2018"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "15.1.0"
node-primitives = { version = "2.0.0", path = "../primitives" }
pallet-contracts-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-mmr-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-consensus-babe-rpc = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-consensus-epochs = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa-rpc = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sc-sync-state-rpc = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate" }
